version betta